--- a/src/css/skeleton.css
+++ b/src/css/skeleton.css
@@ -1,8 +1,4 @@
-.headerGrid {
-    display: grid;
-    grid-template-columns: 0.25fr 1fr 0.25fr;
-}
-
-.headerGrid > h1 { /* Direct child selector */
-    text-align: center;
+* {
+    margin: 0;
+    padding: 0;
 }
